@@ -5,9 +5,9 @@
     <target-gtk-version>2.8.3</target-gtk-version>
   </configuration>
   <import>
-    <widget-library name="../../../build/bin/MonoDevelop.Projects.Gui.dll" />
-    <widget-library name="../../../build/bin/MonoDevelop.Components.dll" />
-    <widget-library name="../../../build/bin/MonoDevelop.Ide.dll" />
+    <widget-library name="../../../build/AddIns/MonoDevelop.Projects.Gui.dll" />
+    <widget-library name="../../../build/AddIns/MonoDevelop.Components.dll" />
+    <widget-library name="../../../build/AddIns/MonoDevelop.Ide.dll" />
     <widget-library name="../../../build/AddIns/MonoDevelop.Deployment.dll" />
     <widget-library name="../../../build/AddIns/MonoDevelop.Gettext/MonoDevelop.Gettext.dll" internal="true" />
   </import>
@@ -881,7 +881,7 @@
             <property name="UseStock">True</property>
             <property name="Type">StockItem</property>
             <property name="StockId">gtk-cancel</property>
-            <property name="ResponseId">-6</property>
+            <property name="IsDialogButton">False</property>
             <property name="label">gtk-cancel</property>
           </widget>
           <packing>
@@ -897,7 +897,7 @@
             <property name="UseStock">True</property>
             <property name="Type">StockItem</property>
             <property name="StockId">gtk-ok</property>
-            <property name="ResponseId">-5</property>
+            <property name="IsDialogButton">False</property>
             <property name="label">gtk-ok</property>
           </widget>
           <packing>
@@ -1252,7 +1252,7 @@
             <property name="UseStock">True</property>
             <property name="Type">StockItem</property>
             <property name="StockId">gtk-cancel</property>
-            <property name="ResponseId">-6</property>
+            <property name="IsDialogButton">False</property>
             <property name="label">gtk-cancel</property>
           </widget>
           <packing>
@@ -1268,7 +1268,7 @@
             <property name="UseStock">True</property>
             <property name="Type">StockItem</property>
             <property name="StockId">gtk-ok</property>
-            <property name="ResponseId">-5</property>
+            <property name="IsDialogButton">False</property>
             <property name="label">gtk-ok</property>
           </widget>
           <packing>
@@ -1625,7 +1625,6 @@
                 <property name="MemberName" />
                 <property name="ShowArrow">False</property>
                 <property name="ButtonStyle">Icons</property>
-                <property name="IconSize">LargeToolbar</property>
                 <node name="toolbarPages" type="Toolbar" />
               </widget>
               <packing>
